Basic DTOs, DB creation and insert ops